corrected code for img src on contacts page to be visible in github pages host

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,7 @@
 }
 
 .bg-photo-second {
-  background-image: url("../IMAGES/cleanBWbg.avif");
+  background-image: url(../IMAGES/cleanBWbg.avif);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
